# devicebox

./: .gitignore  README.md  example.py  pyproject.toml  setup.py
devicebox/: __init__.py  main.py  store.py
